{
    "name": "InputConfiguration",
    "maps": [
        {
            "name": "Locomotion",
            "id": "7d190fb8-e96a-49bb-bb31-baa523d32254",
            "actions": [
                {
                    "name": "look",
                    "type": "Value",
                    "id": "5e76da57-e4e3-474a-87c0-c004bb56f41f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "walk",
                    "type": "Button",
                    "id": "868af95c-6947-48b9-9efa-5be090284540",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "sidewalk",
                    "type": "Button",
                    "id": "6581f886-128b-4e61-93b7-0e4d2624b300",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e7fb0d0-fcd3-4030-a80a-ba0be6b2e740",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f65add30-e121-40cd-a28c-d9e3cde06aaf",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4598abdb-b31c-45ac-b5cb-c1b960a2e4d1",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis WS",
                    "id": "a19556d0-7df9-4f04-b1b8-c778f7f310ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1ef10d47-1ac1-4369-9988-97001d80f77e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2c3511aa-e705-4d54-b558-e7c475eeb2bd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis ARROWS",
                    "id": "62b413a7-2f50-4f28-a14c-ccd1ae3f32be",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0a3a61c5-8608-4bc3-8390-b67bbc7139b8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ab4790ba-0ab7-471d-bcb6-665e763d7cf7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis D-pad",
                    "id": "91543b50-59a5-43ee-aec4-d1569e7a97eb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1f1f028f-d893-4800-b4be-e003bd3da1db",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3f833958-8cb4-46ed-944f-a83a86e078ab",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis AD",
                    "id": "5fc4c389-b6c4-4474-8828-57bf2a17a36c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1e32c56f-1ad6-48d4-884e-2bde3c4ba94f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3b18a427-c7a9-483c-a0ab-4e3d57101792",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis ARROWS",
                    "id": "c53169f7-9075-4c26-bcb2-d769b0d7767e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "94c90226-41d6-4485-aa5c-8a3f6eff087b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5f13cbff-e795-4fc3-9254-eb21aaef3782",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis D-pad",
                    "id": "ecddc550-7c25-4548-a003-e0d5a1b296d0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "43f85acc-ed9a-48cc-bfeb-56c25718d3f5",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "998616be-cea7-494b-b354-363a5d17e278",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sidewalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "c6153873-dd2f-4d84-aef6-b7e3e0dcb6c1",
            "actions": [
                {
                    "name": "UINotification",
                    "type": "Button",
                    "id": "33dab1b9-95f8-4e77-9bab-c6ea34b87d03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIMap_changemode",
                    "type": "Button",
                    "id": "cdc09ab9-6490-4a77-af4e-2ea6add3ba2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIStand_exit",
                    "type": "Button",
                    "id": "cfdf84c3-6253-4f5a-b040-5486021b58ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIInfoDesk_exit",
                    "type": "Button",
                    "id": "c58ad91e-bdde-4f77-b7c4-6b6a6fa475bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UITutorial",
                    "type": "Button",
                    "id": "d9301fe2-2853-431b-8376-1d0f1f3d14ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UITutorial_exit",
                    "type": "Button",
                    "id": "57f98fbb-d3ef-4755-8ef5-ce526f7d5719",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIMainMenu",
                    "type": "Button",
                    "id": "178814e1-5f6a-4b0d-944c-12b446547ef6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIMainMenu_exit",
                    "type": "Button",
                    "id": "27a49450-6163-446c-a8ad-8a79ce6a2d2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UINetworking",
                    "type": "Button",
                    "id": "479e7fad-6f29-4b25-b982-916deddb3353",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UINetworking_exit",
                    "type": "Button",
                    "id": "35ae8f73-bbbd-4030-b20e-6285f502e3e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIAuditorium_exit",
                    "type": "Button",
                    "id": "31ec5a9e-2265-46c0-8c58-b5dc426b1801",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIVideoPlayer_exit",
                    "type": "Button",
                    "id": "7e011528-af81-499c-8527-5da7e686f016",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIVideoPlayer_playstopvideo",
                    "type": "Button",
                    "id": "4d9930d9-8906-4620-a85b-9e1e0760a1b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40638d2e-e734-42c0-80c3-1bcd18bf4437",
                    "path": "<Keyboard>/#(T)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UITutorial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c827c974-5c40-4505-a148-9c402081bf7a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54a1c20c-70fa-4f52-9683-64996756f246",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIMainMenu_exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e489120e-e3b2-42a2-92d4-124a9b3d5e56",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINetworking_exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "672df956-4869-4ac0-8f27-1a6685720896",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIVideoPlayer_exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfc4e7cc-5591-4725-9f66-3434de59c84d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIVideoPlayer_playstopvideo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66f56ae2-6785-4cdf-964b-881cec37dd8b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UITutorial_exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "535aaa23-9a46-4730-885e-a3a32faff5b0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIAuditorium_exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a824fa91-18d2-44a9-976a-a326af8f53cd",
                    "path": "<Keyboard>/#(N)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINetworking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5564831a-cc8a-4a69-a6d7-7eb6f0e7fb77",
                    "path": "<Keyboard>/#(V)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIMap_changemode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cef6922-9e7d-4ef1-a2ec-e970810c0660",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIStand_exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af50ce12-66b5-41a0-9fd7-d09602af564e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIInfoDesk_exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "072153ae-7509-40c0-8baf-0f8d6e0dd70f",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINotification",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Preview",
            "id": "86fa683f-d2f6-44ca-ad9c-dd9f2dc187f3",
            "actions": [
                {
                    "name": "look",
                    "type": "Value",
                    "id": "85ec2b93-8f6d-47de-af7e-623c1a212c3c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "startlook",
                    "type": "PassThrough",
                    "id": "b0c6d6a7-66fc-41d1-a616-13796f0ba793",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32e1824e-1481-41f7-a689-9e037678742b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64f51e6e-9d76-4318-ac59-6f5de04c3941",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88bf770e-37ca-4e58-b406-677f438d5b2f",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdb2ce35-d9b8-45bb-9847-5ea539c477d6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "startlook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}